# syslog

./: CHANGELOG.md  README.md  default.nix  syslog.cabal
app/: Main.hs  UdpClient.hs  UdpServer.hs
nix/: overrides.nix
src/: Syslog.hs
src/Syslog/: Types.hs
