cabal-version:       2.0
name:                syslog
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/chessai/syslog
bug-reports:         https://github.com/chessai/syslog/issues
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           2019 chessai
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/syslog.git

library
  hs-source-dirs:      src
  exposed-modules:     Syslog
                       Syslog.Types
                       

  build-depends:       base >= 4.10.1.0 && < 4.13
                     , bytestring 
                     , network >= 2.8.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010

executable udp-client
  hs-source-dirs:      app
  main-is:             UdpClient.hs

  build-depends:       base >= 4.10.1.0 && < 4.13
                     , bytestring 
                     , network >= 2.8.0.0
                     , syslog

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010

executable udp-server
  hs-source-dirs:      app
  main-is:             UdpServer.hs

  build-depends:       base >= 4.10.1.0 && < 4.13
                     , bytestring 
                     , network >= 2.8.0.0
                     , syslog

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
